apps/frontend/src/style.css
@import "tailwindcss";
@plugin "@tailwindcss/typography";

:root {
  font-family: system-ui, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  color-scheme: light dark;
  @apply text-zinc-300;
  @apply bg-zinc-900;
}

.view-wrapper {
  @apply border-zinc-800 flex relative;
}

.view {
  @apply flex-1 overflow-auto wrap-anywhere;
}

.preview-prose {
  @apply max-w-none prose dark:prose-invert prose-zinc;
}

